--- a/_toc.yml
+++ b/_toc.yml
@@ -20,6 +20,7 @@ parts:
   chapters:
   - file: content/lessons/howto_fly/howto_fly.md
   - file: content/lessons/flight_simulator/flight_simulator.md
+#   - file: content/lessons/howto_fly/howto_fly_fixwing.md
 
 - caption: SESSION 4
   chapters:
