fixed config + preflight checklist

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Peter Betlem, Nil Rodes, Sara M. Cohen
 copyright: "2023 (CC-BY-NC except where otherwise stated)"
 
 repository:
-  url: https://github.com/UNISvalbard/Geo-AUV
+  url: https://github.com/UNISvalbard/Geo-UAV
   branch: main
 
 
