data acquisition updates

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Geo-AUV"
 logo: ./content/assets/UNIS_logo.gif
-author: Peter Betlem, Nil Rodes, Sara M. Cohen
+author: Nil Rodes, Peter Betlem, Sara M. Cohen
 copyright: "2023 (CC-BY-NC except where otherwise stated)"
 
 repository:
