--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Geo-AUV"
-logo: ./content/assets/UNIS_logo.gif
+logo: ./content/assets/geo_mod-01.png
 author: Nil Rodes, Peter Betlem, Sara M. Cohen
 copyright: "2023 (CC-BY-NC except where otherwise stated)"
 
