--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -16,14 +16,16 @@ jobs:
           persist-credentials: false
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: ${{ matrix.python-version }}
+          mamba-version: "*"
+          channels: conda-forge,defaults
+          channel-priority: true
 
       - name: Build
         shell: bash -l {0}
         run: |
-          mamba init bash
           mamba env create jupyterbook
           mamba activate jupyterbook
           mamba install -c conda-forge jupyter-book
