--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -1,4 +1,4 @@
-name: Build and deploy [Python 3.8, 3.9]
+name: Build and deploy [Python 3.9]
 
 on: [push]
 
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
-          mamba env create jupyterbook
+          mamba create -n jupyterbook
           mamba activate jupyterbook
           mamba install -c conda-forge jupyter-book
           jupyter book build .
