--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -22,13 +22,11 @@ jobs:
           mamba-version: "*"
           channels: conda-forge,defaults
           channel-priority: true
+          environment-file: geomod.yml
 
       - name: Build
         shell: bash -l {0}
         run: |
-          mamba create -n jupyterbook
-          mamba activate jupyterbook
-          mamba install -c conda-forge jupyter-book
           jupyter book build .
           
       - name: Deploy
