--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -22,7 +22,7 @@ jobs:
           mamba-version: "*"
           channels: conda-forge,defaults
           channel-priority: true
-          environment-file: ${{ github.workspace }}/geomod.yml
+          environment-file: ${{ github.workspace }}/geomod.yaml
 
       - name: Build
         shell: bash -l {0}
