--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: test
-          environment-file: geomod.yaml
+          #environment-file: geomod.yaml
           python-version: ${{ matrix.python-version }}
           mamba-version: "*"
           channels: conda-forge,defaults
@@ -29,6 +29,7 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
+          conda install jupyter-book -c conda-forge
           jupyter book build .
           
       - name: Deploy
