updated unis ebook link

--- a/_toc.yml
+++ b/_toc.yml
@@ -44,5 +44,5 @@ parts:
 
 - caption: External Links
   chapters:
-  - url: https://unisvalbard.github.io/exbooks/
+  - url: https://unisvalbard.github.io/ebooks/
     title: UNIS Compendium Portal
