--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Geo-AUV"
+title: "Geo-UAV"
 logo: ./content/assets/geo_mod-01.png
 author: Nil Rodes, Peter Betlem, Sara M. Cohen
 copyright: "2023 (CC-BY-NC except where otherwise stated)"
