added pandas + gsd calculator

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ html:
   extra_navbar: ""
   use_edit_page_button: true
   announcement: 'Found this tutorial helpful? Please participate in the survey (<a href="https://unisvalbard.github.io/Geo-UAV/content/survey.html">click here</a>) & Star me!        <iframe src="https://ghbtns.com/github-btn.html?user=UNISvalbard&repo=Geo-UAV&type=star&count=true" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe>'
-  home_page_in_navbar: Sign up for the <a href="https://www.unis.no/course/ag-222-integrated-geological-methods-from-outcrop-to-geomodel/">UNIS AG222 course</a>
+  home_page_in_navbar: true
   comments:
     hypothesis: true
 
@@ -25,8 +25,10 @@ execute:
   execute_notebooks: "auto"
 
 parse:
-  myst_extended_syntax: true
   myst_header_anchors: 4
+  myst_enable_extensions:
+    - "amsmath"
+    - "dollarmath"
 
 sphinx:
   config:
