--- a/geomod.yaml
+++ b/geomod.yaml
@@ -35,6 +35,7 @@ dependencies:
   - importlib-metadata=6.6.0=pyha770c72_0
   - importlib_metadata=6.6.0=hd8ed1ab_0
   - importlib_resources=5.12.0=pyhd8ed1ab_0
+  - intel-openmp=2023.1.0=h57928b3_46319
   - ipykernel=6.23.0=pyh025b116_0
   - ipython=8.13.2=pyh08f2357_0
   - jedi=0.18.2=pyhd8ed1ab_0
@@ -45,10 +46,16 @@ dependencies:
   - jupyter_client=8.2.0=pyhd8ed1ab_0
   - jupyter_core=5.3.0=py311h1ea47a8_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
+  - libblas=3.9.0=17_win64_mkl
+  - libcblas=3.9.0=17_win64_mkl
   - libexpat=2.5.0=h63175ca_1
   - libffi=3.4.2=h8ffe710_5
+  - libhwloc=2.9.1=nocuda_h15da153_6
+  - libiconv=1.17=h8ffe710_0
+  - liblapack=3.9.0=17_win64_mkl
   - libsodium=1.0.18=h8d14728_1
   - libsqlite=3.41.2=hcfcfb64_1
+  - libxml2=2.11.4=hc3477c8_0
   - libzlib=1.2.13=hcfcfb64_4
   - linkify-it-py=2.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
@@ -56,13 +63,16 @@ dependencies:
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - mdit-py-plugins=0.3.5=pyhd8ed1ab_0
   - mdurl=0.1.0=pyhd8ed1ab_0
+  - mkl=2022.1.0=h6a75c08_874
   - myst-nb=0.17.2=pyhd8ed1ab_0
   - myst-parser=0.18.1=pyhd8ed1ab_0
   - nbclient=0.7.4=pyhd8ed1ab_0
   - nbformat=5.8.0=pyhd8ed1ab_0
   - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - openssl=3.1.0=hcfcfb64_3
+  - numpy=1.25.0=py311h0b4df5a_0
+  - openssl=3.1.1=hcfcfb64_1
   - packaging=23.1=pyhd8ed1ab_0
+  - pandas=2.0.2=py311hf63dbb6_0
   - parso=0.8.3=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
   - pip=23.1.2=pyhd8ed1ab_0
@@ -71,6 +81,7 @@ dependencies:
   - prompt-toolkit=3.0.38=pyha770c72_0
   - prompt_toolkit=3.0.38=hd8ed1ab_0
   - psutil=5.9.5=py311ha68e1ae_0
+  - pthreads-win32=2.9.1=hfa6e2cd_3
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.2=py311h1ea47a8_2
@@ -83,6 +94,7 @@ dependencies:
   - python=3.11.3=h2628c8c_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-fastjsonschema=2.16.3=pyhd8ed1ab_0
+  - python-tzdata=2023.3=pyhd8ed1ab_0
   - python_abi=3.11=3_cp311
   - pytz=2023.3=pyhd8ed1ab_0
   - pywin32=304=py311h12c1d0e_2
@@ -113,6 +125,7 @@ dependencies:
   - sqlalchemy=2.0.12=py311ha68e1ae_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - tabulate=0.9.0=pyhd8ed1ab_1
+  - tbb=2021.9.0=h91493d7_0
   - tk=8.6.12=h8ffe710_0
   - tornado=6.3=py311ha68e1ae_0
   - traitlets=5.9.0=pyhd8ed1ab_0
