--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ html:
   use_repository_button: true
   extra_navbar: ""
   use_edit_page_button: true
-  announcement: 'Found this tutorial helpful? Please participate in the survey (<a href="https://unisvalbard.github.io/Geo-UAV/content/survey.html">click here</a>) & Star me!        <iframe src="https://ghbtns.com/github-btn.html?user=UNISvalbard&repo=Geo-UAV&type=star&count=true" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe>'
+  announcement: 'Found this tutorial helpful? Please Star me! <a href="https://github.com/UNISvalbard/Geo-UAV"> <img src="https://img.shields.io/github/stars/UNISvalbard/Geo-UAV"></a>'
   home_page_in_navbar: true
   comments:
     hypothesis: true
